--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,70 @@
-dfas
+<!DOCTYPE html>
+<html lang="en" ng-app="todoApp">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Todo app</title>
+
+	<!-- Bootstrap -->
+	<link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+	<style>
+		html {
+			overflow-y: scroll;
+		}
+		body {
+			padding-top: 50px;
+		}
+		#todo-list {
+			margin-bottom: 30px;
+		}
+		#todo-form {
+			margin-bottom: 30px;
+		}
+	</style>
+
+	<!-- AngularJS -->
+	<script src="libs/angular/angular.min.js"></script>
+	<script src="core.js"></script>
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
+<body ng-controller="mainController">
+	<div class="container">
+		<div class="jumbotron text-center">
+			<h1>Ég þarf að gera <span class="label label-info">{{ todos.length }}</span> hluti</h1>
+		</div>
+		<!-- Create todos -->
+		<div id="todo-form" class="row">
+			<div class="col-sm-8 col-sm-offset-2 text-center">
+				<form>
+					<div class="form-group">
+						<input type="text" class="form-control input-lg text-center" placeholder="Kaupa mjólk" ng-model="formData.text">
+					</div>
+					<button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Bæta við</button>
+				</form>
+			</div>
+		</div>
+		<!-- Todo list -->
+		<div id="todo-list" class="row">
+			<div class="col-sm-4 col-sm-offset-4">
+				<div class="checkbox" ng-repeat="todo in todos">
+					<label>
+						<input type="checkbox" ng-click="deleteTodo(todo._id)">
+						{{ todo.text }}
+					</label>
+				</div>
+			</div>
+		</div>
+	</div><!-- /.container -->
+
+	<script src="libs/jquery/dist/jquery.min.js"></script>
+	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
